# svn-viewer

./: .gitignore  LICENSE  README.md  bump_version.sh  main.py  pyproject.toml
.github/workflows/: publish.yml
svn_viewer/: main.py
