[project]
name = "svn-viewer"
version = "0.1.1"
description = "A terminal UI browser for SVN repositories, with syntax highlighting and image preview"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.0.2",
    "pygments>=2.17.2",
    "pillow>=10.0,<11.0",
    "term-image>=0.7.2",
    "urwid>=3.0.5",
]
