[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["svn_viewer*"]

[project]
name = "svn-viewer"
version = "0.1.1"
description = "A terminal UI browser for SVN repositories, with syntax highlighting and image preview"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.0.2",
    "pygments>=2.17.2",
    "pillow>=10.0,<11.0",
    "term-image>=0.7.2",
    "urwid>=3.0.5",
]

[project.scripts]
svn-viewer = "svn_viewer.main:main"
